[metadata]
name = salami
version = 0.1.0
author = Patrick Cleeve
author_email = Patrick.Cleeve@monash.edu
description = automated volume electron microscopy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DeMarcoLab/salami
project_urls =
    Bug Tracker = https://github.com/DeMarcoLab/salami/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    zarr
    dask
    tifffile
    matplotlib
    napari
    numpy
    numba
    scikit-image
    # torch # install with cuda from here: https://pytorch.org/get-started/locally/
    # torchvision  
    mrcfile
    pyfftw
    tqdm
    pyqt5
    streamlit

[options.entry_points]
console_scripts =
    salami_ui = salami.ui.SalamiUI:main
    salami_viewer = salami.ui.SalamiViewerUI:main

